# imagededup

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  0.29  404.html  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  azure-pipelines.yml  index.html  new_release.sh  pypi.sh  pyproject.toml  remove.py  requirements.txt  setup.py  sitemap.xml  test.file
.github/workflows/: build_wheels.yml  codeql.yml  deploy_docs.yml  docs_deploy.yml  test.yml
CONTRIBUTING/: index.html
LICENSE/: index.html
docs/: 404.html  index.html  sitemap.xml
docs/CONTRIBUTING/: index.html
docs/LICENSE/: index.html
docs/search/: search_index.json
docs/start/: index.html
evaluation/evaluation/: index.html
examples/: CIFAR10-duplicates.ipynb  CIFAR10_duplicates.ipynb  Encoding_generation.ipynb  Evaluation.ipynb  Finding_duplicates.ipynb  duplicates_cifar10.ipynb  example_benchmarking_workflow.py  example_workflow_with_bktree.py  explorer.ipynb  sample_benchmarking_flow.ipynb  sample_benchmarking_flow.ipynb.REMOVED.git-id  use_custom_model.ipynb
imagededup/: __init__.py  all_average_metrics.pkl  bktree.py  brute_force.py  check_hash_bla.pkl  cnn.py  evaluation.py  fingerprinting.py  hashing.py  image_utils.py  logger.py  retrieval.py
mkdocs/: README.md  autogen.py  build_docs.sh  mkdocs.yml  run_docs.sh
notebooks/: CNN_explorer_v2.ipynb  Dataset_Preparation.ipynb  Untitled.ipynb  Untitled1.ipynb  all_average_metrics.pkl  cnn_explorer.ipynb  cnn_var_2_weights.pkl.REMOVED.git-id  cnn_variants.ipynb  docs_1q.pkl  docs_1r.pkl  explorer.ipynb  mobilenetv2.ipynb  post_analysis_hashing_transformationDS.ipynb  sample_benchmarking_flow.ipynb  scratchpad.ipynb  var_1q.pkl.REMOVED.git-id  var_1r.pkl.REMOVED.git-id
search/: search_index.json
streamlit_webapp/: Aptfile  Dockerfile  Procfile  README.md  app.py  requirements.txt  runtime.txt  setup.sh
tests/: test_bktree.py  test_brute_force.py  test_brute_force_cython.py  test_classification.py  test_client.py  test_cnn.py  test_data_generator.py  test_evaluation_logic.py  test_evaluator.py  test_general_utils.py  test_hash.py  test_hashing.py  test_image_utils.py  test_information_retrieval.py  test_performance.py  test_plotter.py  test_retrieval.py
(+119 files in other folders)
